--- a/02-multibg.html
+++ b/02-multibg.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Miltibg</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/02-multibg.css" />
   </head>
-  <body></body>
+  <body>
+    <a href="./index.html">Back to main</a>
+
+    <!-- Background for the whole block (hero) -->
+    <div class="overlay"></div>
+  </body>
 </html>
