--- a/03-pseudoelements.html
+++ b/03-pseudoelements.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pseudoelements</title>
+    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/03-pseudoelements.css" />
   </head>
-  <body></body>
+  <body>
+    <a href="./index.html">Back to main</a><br />
+
+    <a href="" class="button">Queckly start</a>
+
+    <ul class="list">
+      <li class="list-item icon-delivery">
+        <h2 class="title">Lorem ipsum dolor sit.</h2>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+          expedita fugit consequatur eaque ex tempora eum pariatur, magni
+          provident labore a tempore rem dolore. Molestias magnam sint
+          perferendis esse explicabo.
+        </p>
+      </li>
+
+      <li class="list-item icon-mobile">
+        <h2 class="title">Lorem ipsum dolor sit.</h2>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+          expedita fugit consequatur eaque ex tempora eum pariatur, magni
+          provident labore a tempore rem dolore. Molestias magnam sint
+          perferendis esse explicabo.
+        </p>
+      </li>
+
+      <li class="list-item icon-code">
+        <h2 class="title">Lorem ipsum dolor sit.</h2>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias,
+          expedita fugit consequatur eaque ex tempora eum pariatur, magni
+          provident labore a tempore rem dolore. Molestias magnam sint
+          perferendis esse explicabo.
+        </p>
+      </li>
+    </ul>
+
+    <div href="" class="link"></div>
+  </body>
 </html>
