--- a/03-sprite.html
+++ b/03-sprite.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SVG sprite</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/03-sprite.css" />
   </head>
-  <body></body>
+  <body>
+    <a href="./index.html">Back to main</a>
+  </body>
 </html>
