--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vector graphic</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
     <ul>
-      <li><a href="./01-external.html"></a></li>
-      <li><a href="./02-inline.html"></a></li>
-      <li><a href="./03-sprite.html"></a></li>
+      <li><a href="./01-external.html">External SVG</a></li>
+      <li><a href="./02-inline.html">Inline SVG</a></li>
+      <li><a href="./03-sprite.html">SVG sprite</a></li>
     </ul>
   </body>
 </html>
