--- a/03-sprite.html
+++ b/03-sprite.html
@@ -18,15 +18,15 @@
 
     <ul class="actions">
       <li>
-        <button class="button">
-          <svg class="button-icon">
+        <button class="button" aria-label="Edit">
+          <svg class="button-icon" width="60px" height="60px">
             <use href="./images/sprite.svg#edit"></use>
           </svg>
         </button>
       </li>
       <li>
-        <button class="button">
-          <svg class="button-icon">
+        <button class="button" aria-label="Add to favorite">
+          <svg class="button-icon" width="40px" height="40px">
             <use href="./images/sprite.svg#star"></use>
           </svg>
         </button>
