--- a/01-button.html
+++ b/01-button.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/01-button.css" />
   </head>
   <body>
-    <a href="./index.html">Back to main</a>
+    <a href="./index.html">Back to main</a><br />
 
     <button class="btn">Subscribe</button>
   </body>
