--- a/02-icon-button.html
+++ b/02-icon-button.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/02-icon-button.css" />
   </head>
   <body>
-    <a href="./index.html">Back to main</a>
+    <a href="./index.html">Back to main</a><br />
+
+    <button class="btn">Subscribe</button>
   </body>
 </html>
