--- a/03-underline.html
+++ b/03-underline.html
@@ -10,5 +10,11 @@
   </head>
   <body>
     <a href="./index.html">Back to main</a><br />
+
+    <ul class="menu">
+      <li class="menu-item"><a href="" class="menu-link">Блог</a></li>
+      <li class="menu-item"><a href="" class="menu-link">Профиль</a></li>
+      <li class="menu-item"><a href="" class="menu-link">Галерея</a></li>
+    </ul>
   </body>
 </html>
