--- a/01-crossbrowser.html
+++ b/01-crossbrowser.html
@@ -20,18 +20,36 @@
 
     <form class="form" autocomplete="off">
       <div class="form-field">
-        <input type="text" class="form-input" name="name" id="name" placeholder=" " />
+        <input
+          type="text"
+          class="form-input"
+          name="name"
+          id="name"
+          placeholder=" "
+          data-placeholder="Maksym Maleiev"
+        />
         <label for="name" class="form-label">Name</label>
-        <!-- <span class="icon"></span> -->
+        <span class="icon"></span>
       </div>
 
       <div class="form-field">
         <input type="email" class="form-input" name="mail" id="mail" placeholder=" " />
         <label for="mail" class="form-label">Email</label>
-        <!-- <span class="icon"></span> -->
+        <span class="icon"></span>
       </div>
 
       <button type="submit">Submit</button>
     </form>
+
+    <!-- This script show placeholder when is focus on form-fierld -->
+    <script>
+      document.querySelector('.form-input').addEventListener('focusin', e => {
+        e.currentTarget.placeholder = e.currentTarget.dataset.placeholder;
+      });
+
+      document.querySelector('.form-input').addEventListener('focusout', e => {
+        e.currentTarget.placeholder = ' ';
+      });
+    </script>
   </body>
 </html>
