--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Preprocessor SASS</title>
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <div class="box">
+      <button class="button">button</button>
+    </div>
+
     <ul class="features">
       <li class="icon icon-facebook"></li>
       <li class="icon icon-github"></li>
