--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Adaptive layout</title>
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body>
@@ -15,27 +15,11 @@
     <div class="container">
       <nav class="nav">
         <a class="company-logo" href="">Logo</a>
-
-        <!-- <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
-          <svg width="40" height="40" aria-label="Mobile menu switch">
-            <use class="icon-cross" href="./img/sprite.svg#cross"></use>
-            <use class="icon-menu" href="./img/sprite.svg#menu"></use>
-          </svg>
-        </button> -->
-
-        <!-- <div class="menu-container" id="menu-container" data-menu>
-          <div class="navigation"></div>
-          <div class="contacts"></div>
-        </div> -->
       </nav>
     </div>
   </div>
 
   <main>
-    <!-- <div class="container">
-      <button type="button" data-modal-open>Open</button>
-    </div> -->
-
     <section class="section features">
       <div class="container">
         <h2 class="section-title">First section title</h2>
@@ -63,33 +47,6 @@
       </div>
     </section>
   </main>
-
-  <!-- <div class="backdrop is-hidden" data-modal>
-    <div class="modal">
-      <button type="button" data-modal-close>Close</button>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto
-        facilis quas unde iusto excepturi, doloremque sed cum est quis modi ex
-        nihil natus ab impedit quisquam officia, suscipit dignissimos sit,
-        autem velit? Praesentium ipsum eligendi molestias a corporis vitae
-        autem dolores accusamus at eius voluptate, harum amet iusto deserunt
-        illum!
-      </p>
-      <p>
-        Officia voluptatibus voluptate aut tempora voluptas, repellat quos,
-        eius officiis consequatur suscipit molestiae ipsum, ut voluptatem
-        impedit. Nihil sint possimus obcaecati nulla tenetur quidem est,
-        molestias nobis facilis laudantium provident ab quos molestiae
-        voluptatibus necessitatibus nisi rem omnis? Mollitia, id corporis!
-        Reprehenderit error rerum assumenda! Dolorem sunt consequatur ad
-        eligendi.
-      </p>
-    </div>
-  </div> -->
-
-  <!-- <div class="mobile-menu" >
-      <div class="content"></div>
-    </div> -->
 
   <script src="./js/menu.js"></script>
   <script src="./js/modal.js"></script>
