--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Responsive pictures</title>
+  <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="'" />
 </head>
 
 <body>
-
+  <ol>
+    <li><a href="./01-basic.html">Basic Responsiveness</a></li>
+    <li><a href="./02-responsive.html">Responsive &lt;img&gt; element</a></li>
+    <li><a href="./03-picture.html">&lt;picture&gt; element</a></li>
+    <li><a href="./04-art-direction.html">Framing</a></li>
+  </ol>
 </body>
 
 </html>
