--- a/01-basic.html
+++ b/01-basic.html
@@ -4,11 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Basic Responsiveness</title>
+  <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/01-basic.css" />
 </head>
 
 <body>
+  <p><a href="./index.html">Back to main</a></p>
 
+  <div class="thumb">
+    <img src="./img/cat-640.jpg" alt="Cat" />
+  </div>
 </body>
 
 </html>
